--- a/css/style.css
+++ b/css/style.css
@@ -9661,7 +9661,7 @@ h6,
   bottom: 0;
   left: 0;
   opacity: 0;
-  background: rgba(253, 172, 83, 0.7);
+  background: #dc3545;
   border: 15px solid #ffffff;
   transition: .5s;
 }
